[package]
name = "usbsas-usbdev"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.10"
log = "0.4"
rusb = "0.9"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-mock = { path = "../usbsas-mock", optional = true }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
mock = ["usbsas-mock"]
