[package]
name = "usbsas-usbdev"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.11"
log = "0.4"
mio = { version = "0.8", features = ["os-ext"] }
thiserror = "1.0"
udev = { version = "0.9", features = ["mio"] }
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-mock = { path = "../usbsas-mock", optional = true }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
mock = ["usbsas-mock"]
