[package]
name = "usbsas-usbsas"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = "4.1"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-mass-storage = { path = "../usbsas-mass-storage" }
usbsas-mock = { path = "../usbsas-mock", optional = true }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
mock = ["usbsas-mock"]

# cargo-deb
[package.metadata.deb]
name = "usbsas-core"
maintainer = "usbsas"
copyright = "usbsas"
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
triggers-file = "debian/triggers"
assets = [
  ["target/release/usbsas-usbsas", "usr/libexec/", "755"],
  ["target/release/usbsas-analyzer", "usr/libexec/", "755"],
  ["target/release/usbsas-cmdexec", "usr/libexec/", "755"],
  ["target/release/usbsas-dev2scsi", "usr/libexec/", "755"],
  ["target/release/usbsas-downloader", "usr/libexec/", "755"],
  ["target/release/usbsas-files2fs", "usr/libexec/", "755"],
  ["target/release/usbsas-files2tar", "usr/libexec/", "755"],
  ["target/release/usbsas-filter", "usr/libexec/", "755"],
  ["target/release/usbsas-fs2dev", "usr/libexec/", "755"],
  ["target/release/usbsas-identificator", "usr/libexec/", "755"],
  ["target/release/usbsas-scsi2files", "usr/libexec/", "755"],
  ["target/release/usbsas-tar2files", "usr/libexec/", "755"],
  ["target/release/usbsas-uploader", "usr/libexec/", "755"],
  ["target/release/usbsas-usbdev", "usr/libexec/", "755"],
  ["../config.example.toml", "etc/usbsas/config.toml", "644"],
  ["assets/99-usbsas.rules", "etc/udev/rules.d/", "644"],
  ["assets/usbsas.conf", "etc/modprobe.d/", "644"],
]
conf-files = ["/etc/usbsas/config.toml"]
