[package]
name = "usbsas-utils"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
toml = "0.8"

[dependencies]
clap = "4.5"
env_logger = "0.11"
log = "0.4"
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }

[features]
log-json = ["serde_json", "time"]
